k8s/line-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lineapi-deployment
  labels:
    app: lineapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lineapi
  template:
    metadata:
      labels:
        app: lineapi
    spec:
      containers:
      - name: lineapi
        image: lineapi
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
  apiVersion: v1
  kind: Service
  metadata:
    name: lineapi-svc
    labels:
      app: lineapi
  spec:
    selector:
      app: lineapi
    ports:
      - port: 80
        targetPort: 80
    type: NodePort
