k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noblemed-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: noblemed-svc
      port:
        number: 80
  rules:
    - host: noblemed.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: noblemed-svc
                port:
                  number: 80
